Fix header by removing overflow scrollbars and apply new color theme to get rid of flashy pink.

--- a/Source/CookItNow.Web/app/quick-recipe/assets/css/_quick-recipe-footer.scss
+++ b/Source/CookItNow.Web/app/quick-recipe/assets/css/_quick-recipe-footer.scss
@@ -3,6 +3,7 @@
 .quick-recipe {
     footer {
         height: $quick-recipe-footer-height;
+        background: $quick-recipe-footer-color;
         
         // background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.44) 14%, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 98%, rgba(0,0,0,1) 100%);
         // background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.44) 14%,rgba(0,0,0,1) 48%,rgba(0,0,0,1) 98%,rgba(0,0,0,1) 100%);
