--- a/Source/CookItNow.Web/app/quick-recipe/assets/css/_variables.scss
+++ b/Source/CookItNow.Web/app/quick-recipe/assets/css/_variables.scss
@@ -8,8 +8,12 @@ $quick-recipe-first-level-padding: 60px;
 $quick-recipe-second-level-padding: 140px;
 
 $quick-recipe-header-height: 70px;
+$quick-recipe-header-color: rgba(17, 124, 178, 0.5);
 
 $quick-recipe-footer-height: 42px;
+$quick-recipe-footer-color: rgba(17, 124, 178, 0.5);
+
+$quick-sub-recipe-color: rgba(198, 236, 255, 0.5);
 
 $font-fancy: "Chocolate Box";
 $font-fancy-decorative: "Chocolate Box Decorative";
